--- a/css/style.css
+++ b/css/style.css
@@ -649,15 +649,20 @@ h3.my-profession{
         max-width: 100%;
     }
     .about .about-content .about-text img {
-        width: 350;
-        margin-left: 160px;
+        width: 260px;
+        margin-left: 40px;
         margin-bottom: 10px;
     }
     .contact .contact-info-item p {
-        font-size: 12px;
+        font-size: 11px;
         line-height: 25px;
         color: var(--text-black700);
         font-weight: 400;
+    }
+    .about .about-content .personnal-info .info-item p span {
+        display: block;
+        margin-left: 0;
+        font-size: 12px;
     }
     
 }
