--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,17 @@ ul{
     transition: 3s cubic-bezier(.5, 0, 0, 1);
 }
 
+/* PRELOADER */
+
+#preloader{
+    background: #fff url(../images/loading.gif) no-repeat center center;
+    background-size: 10%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
 /* ASIDE */
 
 section{
