--- a/css/style.css
+++ b/css/style.css
@@ -762,6 +762,18 @@ h3.my-profession{
     transform: translateY(10%);
 }
 
+footer{
+    background: var(--bg-black900);
+}
+
+footer p{
+    text-align: center;
+    font-weight: 400;
+    color: #4e4e4e;
+    font-size: 13px;
+    padding-bottom: 20px;
+}
+
 /* RESPONSIVE */
 
 @media (max-width:1199px){
